# yugabytedbrust

./: .env  Cargo.toml  README.md
src/: crud_controller.rs  default_strings.rs  generic_json_error_response.rs  generic_json_success_response.rs  main.rs  ycql_db_schema_and_queries.rs  yugabyte_db_ycql_config.rs
