[package]
name = "yugabytedbrust"
version = "0.1.0"
authors = ["devbasil"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# YCQL driver
cdrs-tokio = "3.0.0"
cdrs-tokio-helpers-derive = "2.0.0"

# Rest API
actix-files = "0.6.0-beta.4"
actix-http = "=3.0.0-beta.5"
actix-rt = "2.2.0"
actix-service = "=2.0.0-beta.5"
actix-web = "=4.0.0-beta.5"


# JWT Authentication
actix-web-httpauth = "0.5.1"

# Json deserealization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Handling timestamps
chrono = "0.4.19"

derive_more = "0.99.11"
r2d2 = "0.8.9"
futures = "0.3.13"
dotenv = "0.15.0"
validator = { version = "0.12", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4", "v1"] }
time = "0.2.26"
env_logger = "0.8"